[tool.poetry]
name = "snomed-database-loader"
version = "0.1.0"
description = ""
authors = ["Axel Vanraes <axel.vanraes@tiro.health>"]
readme = "README.md"
packages = [{include = "snomed_database_loader"}]

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-bigquery = "^3.4.1"
pymysql = "^1.0.2"
mysql-connector = "^2.2.9"
jupyter = "^1.0.0"
elasticsearch = "^8.6.0"
tqdm = "^4.64.1"
sqlalchemy = "^1.4.46"
ipywidgets = "^8.0.4"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
load_to_bq = "BigQuery.import_release:cli"
